--- a/views/devices.ejs
+++ b/views/devices.ejs
@@ -1,5 +1,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
+    /**
+     * Send post request to communicate with the Pi 
+     */
     function updateSchedule(e, value){
         console.log(e)
         console.log(e.id)
