--- a/views/viewSchedule.ejs
+++ b/views/viewSchedule.ejs
@@ -4,6 +4,9 @@
 <script>
     var schedulesConfig = []
     var urls = {}
+    /**
+     * Preview the file onclick of its name 
+     */
     function showFile(filename){
         console.log(urls)
 		var image = document.getElementById('image')
@@ -56,6 +59,9 @@
             'Saturday':[],
             'Sunday':[],
         }
+        /**
+         * Parse the data of the schedule into the week dictionary to split it by days instead
+         */
         var weekKeys = Object.keys(week)
         for (var i in schedulesConfig['schedule']){
             for (var j in schedulesConfig['schedule'][i]['days']){
@@ -66,6 +72,9 @@
                 })
             }
         }
+        /**
+         * Add the schedule information to the event block to be displayed
+         */
         for (var i in weekKeys){
             for (var j in week[weekKeys[i]]){
                 var temp = parseInt(j) + 1
