--- a/views/viewPlaylist.ejs
+++ b/views/viewPlaylist.ejs
@@ -95,10 +95,10 @@
                     <td>
                         <table border='0'>
                             <tbody>
-                                <% for (var j = 0; j < config[i].playlist.length; j++) { %>
+                                <% for (var j = 0; j < config[i].playlists.length; j++) { %>
                                     <tr>
                                         <td>
-                                            <p class='mediaFiles'><%= config[i].playlist[j][0] %></p>
+                                            <p class='mediaFiles'><%= config[i].playlists[j][0] %></p>
                                         </td>
                                     </tr>
                                 <% }; %>
