--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -42,7 +42,7 @@ li a:hover.navbar {
 		<form action="/logout?_method=DELETE" method="POST">
 			<li class ="navbar"><a class ="navbar" href="<%= previousPage %>">Back</a></li>
 			<li class ="navbar"><a class ="navbar" href="/">Home</a></li>
-			<li class ="navbar"><button class ="navbar" type="submit">Logout</button></li>
+			<li class ="navbar" style="float:right"><button class ="navbar" type="submit">Logout</button></li>
 		</form>
 	</ul>
 <% } else { %>
