--- a/views/viewPlaylist.ejs
+++ b/views/viewPlaylist.ejs
@@ -88,12 +88,15 @@
                         <table border='0'>
                             <tbody>
                                 <% for (var j = 0; j < config[i].playlists.length; j++) { %>
-                                    <tr>
-                                        <td>
-                                            <p class='mediaFiles'><%= config[i].playlists[j][0] %></p>
-                                        </td>
-                                    </tr>
-                                <% }; %>
+                                    <% config[i].playlists[j].forEach((playlist) => { %>
+                                        <% console.log(playlist) %>
+                                        <tr>
+                                            <td>
+                                                <p class='mediaFiles'><%= playlist[0] %></p>
+                                            </td>
+                                        </tr>
+                                    <% }) %>
+                                <% } %>
                             </tbody>
                         </table>
                     </td>
