--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -39,8 +39,10 @@
         $('#fileUpload').submit((event) => {
             event.preventDefault()
             uploadArray.forEach((file)=>{
-                if (!file) return false
-                alert('Not all files are uploaded yet')
+                if (!file) {
+                    alert('Not all files are uploaded yet') 
+                    return false
+                }
             })
             return true
         })
