--- a/views/playlist.ejs
+++ b/views/playlist.ejs
@@ -128,6 +128,10 @@
             }
             console.log(aspectRatio)
             var playlistName = $('#playlistName').val()
+            if (playlistName.endsWith('')){
+                alert("Playlist name cannot end with space")
+                return
+            }
 
             $.post('/files/createPlaylist', {
                 playlists: playlists,
