whitespace validation bug for playlist & schedule

--- a/views/playlist.ejs
+++ b/views/playlist.ejs
@@ -128,7 +128,8 @@
             }
             console.log(aspectRatio)
             var playlistName = $('#playlistName').val()
-            if (playlistName.endsWith('')){
+            if (playlistName.endsWith(' ')){
+                console.log("'"+playlistName+"'")
                 alert("Playlist name cannot end with space")
                 return
             }
