admin devices page

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -3,7 +3,7 @@
     <form method = "GET" action = "/admin/manageDevices" enctype = "multipart/form-data" >
         <input type="submit" type="text" value="Add/Delete Device">
     </form>
-    <form method = "GET" action = "/admin/manageDevices" enctype = "multipart/form-data" >
+    <form method = "GET" action = "/admin/devices" enctype = "multipart/form-data" >
         <input type="submit" type="text" value="View Devices">
     </form>
     <form method = "GET" action = "/admin/manageUsers" enctype = "multipart/form-data" >
